# Meca500-Control

Meca500_Pinocchio/: CMakeLists.txt
Meca500_Pinocchio/examples/: Meca_Connection_Check.cpp  Meca_Move.cpp  Meca_Pos_control_Pinocchio.cpp  Meca_Velo_control.cpp  collision_detection.cpp  dynamics_test.cpp  forward_kinematics_example.cpp  full_pipeline_example.cpp  inverse_kinematics_example.cpp  lerp_example.cpp  orientation_conversion_example.cpp  testFKIK.cpp  testFKIK_for_mecha.cpp  two_pose_lerp_example.cpp
Meca500_Pinocchio/include/Meca500/: robot_interface.h  socket_comm.h
Meca500_Pinocchio/include/kinematics/: config.h  dynamics.h  kinematics.h  motion_generator.h  utils.h
Meca500_Pinocchio/src/: dynamics.cpp  kinematics.cpp  motion_generator.cpp  robot_interface.cpp  socket_comm.cpp  utils.cpp
Meca500_Pinocchio/urdfs/Meca_500_urdf-R2/Meca_500_urdf-R2/: CMakeLists.txt  package.xml
Meca500_Pinocchio/urdfs/Meca_500_urdf-R2/Meca_500_urdf-R2/launch/: display.launch  gazebo.launch
Meca500_Pinocchio/urdfs/Meca_500_urdf-R2/Meca_500_urdf-R2/meshes/: Joint 1.STL  Joint 5.STL  Joint 6.STL  Needle tip.STL  base_link.STL  joint 2.STL  joint 3.STL  joint 4.STL
Meca500_Pinocchio/urdfs/assy_arm_r11/Assy-Arm-R11/: CMakeLists.txt  package.xml
Meca500_Pinocchio/urdfs/assy_arm_r12/Assy-Arm-R12/: CMakeLists.txt  package.xml  urdf.rviz
Meca500_Pinocchio/urdfs/assy_arm_r5/: Assy-Arm-R5.urdf
Meca500_Pinocchio/urdfs/assy_arm_r6/: Assy-Arm-R6.urdf
Meca500_Pinocchio/urdfs/assy_arm_r9/Assy-Arm-R9/: CMakeLists.txt  package.xml
(+44 files in other folders)
